# shapemaker

./: .gitignore  .mailmap  .rustc_info.json  Cargo.toml  Justfile  README.md  README.md.in  bacon.toml  bundler.toml  crates.js  help.html  index.html  package.json  renovate.json  results.csv  rustfmt.toml  search-index.js  settings.html  shapemaker.d.ts  shapemaker.js  shapemaker_bg.wasm  shapemaker_bg.wasm.d.ts  src-files.js  timings.csv
.cargo/: config.toml
.github/workflows/: check.yml  demo.yml  deploy.yml  docs.yml  fixup.yml  tangle.sh  tangle.yml
debug/.fingerprint/addr2line-23030d438c01b23a/: lib-addr2line  lib-addr2line.json
debug/.fingerprint/adler-d28391fd56c51c52/: lib-adler  lib-adler.json
debug/.fingerprint/adler2-6d9289512584d3cb/: lib-adler2  lib-adler2.json
debug/.fingerprint/ahash-16984eb492f66269/: run-build-script-build-script-build  run-build-script-build-script-build.json
debug/.fingerprint/ahash-3e182175cbd0ac7b/: build-script-build-script-build  build-script-build-script-build.json
debug/.fingerprint/ahash-f5f4f38569ef0b31/: lib-ahash  lib-ahash.json
debug/.fingerprint/allocator-api2-6a90db1dfdb64c67/: lib-allocator_api2  lib-allocator_api2.json
debug/.fingerprint/annotate-snippets-cb76d420771ade83/: lib-annotate_snippets  lib-annotate_snippets.json
debug/.fingerprint/anstream-baa72501a666833d/: lib-anstream  lib-anstream.json
debug/.fingerprint/anstyle-query-e166c3f5684db7d6/: lib-anstyle_query  lib-anstyle_query.json
debug/.fingerprint/anyhow-0f2dbf815ee924bc/: run-build-script-build-script-build  run-build-script-build-script-build.json
debug/.fingerprint/anyhow-41116451e9240c00/: lib-anyhow  lib-anyhow.json
debug/.fingerprint/anyhow-bcc4e848c5b7e894/: build-script-build-script-build  build-script-build-script-build.json
doc/: help.html
doc/shapemaker/: all.html
examples/: LICENSE
examples/dna-analysis-machine/: Cargo.toml
examples/gallery/: fill.rb
examples/playground/: .gitignore  Cargo.toml
examples/postamble-motif/: Cargo.toml
examples/schedule-hell/: .gitignore  Cargo.toml  chapters.txt
examples/schedule-hell-backbone/: Cargo.toml
examples/schedule-hell-bicolor/: Cargo.toml
examples/schedule-hell-starry-sky/: Cargo.toml
examples/schedule-hell/src/: lib.rs  main.rs
examples/schedule-hell/src/scenes/: backbone.rs  dices.rs  first_break.rs  intro.rs  mod.rs  starry_sky.rs
examples/specimen/: Cargo.toml
paper/: LICENSE  bibliography.yaml  include-function.typ  main.typ  snazzylight.tmTheme  template.typ  timings.csv  utils.typ
research/: README.md  pyproject.toml
research/adapters/flstudio/: adapter.py
script/: debug-performance.py
search.desc/shapemaker/: shapemaker-desc-0-.js
search.index/: 00939ecf635e.js  01421945d55d.js  014c1d999195.js  0179a56b85e6.js  02984f4f5297.js  0319170a28fc.js  03a0bc656041.js  0465598192b7.js  048ce51a80fa.js  04aad868d9be.js  04dc15845b26.js  0542a600d90b.js  05779140fc7e.js  0583231be919.js  05e629d47a6f.js  0721427b88b3.js  087af543e5e8.js  0893298f5a8b.js  08d5ab187d62.js  0901c6b5deb3.js  094430339ce1.js  09454918ce66.js  09b35b88a923.js  0a0032dbff99.js  0a7d0c554efd.js  0a90eb226585.js  0a9ee7dda5df.js  0b297555022d.js  0b71c38e33d1.js  0b818c7af7ed.js  0b8e5730ea0e.js  0bb3ceb72431.js  0bb82f4ce753.js  0be3925f7bed.js  0c5c5f292815.js  0cab530febc6.js  0e61c6e9e435.js  0e628e6d2496.js  0e9826dfdb71.js  0eb8f07906b6.js  (+315 more)
search.index/crateNames/: 319a58b813cd.js
search.index/desc/: d6dc0992ce5f.js
search.index/entry/: 07cfc8598166.js  22425886fc9e.js  793d736b70aa.js
search.index/function/: 2728ed8d8bd4.js  68ba9d83793a.js  f0429ff09860.js
search.index/generic_inverted_index/: 90c7a71897ee.js  cb8f6c194474.js  f5fcb08d2ab3.js
search.index/name/: 6fbb2a762751.js  76b4511229b8.js  ff66aef4c8e9.js
search.index/normalizedName/: 24d00bdc17d2.js  29cf69fad275.js  e077c3ff89ae.js
search.index/path/: 0b16260a93c7.js  1c054dd2b99f.js  9cf52efab9c5.js  ba5a5c89c25c.js
search.index/type/: 02963a79bd7c.js  2312656cbd19.js  ae5b1ae6bb07.js
shapemaker/: all.html  fn.enabled_features.html  index.html  sidebar-items.js
shapemaker/cli/: fn.canvas_from_cli.html  fn.cli_args.html  index.html  struct.Args.html
shapemaker/geometry/: index.html  sidebar-items.js
shapemaker/graphics/: index.html  sidebar-items.js
shapemaker/random/: index.html  sidebar-items.js
shapemaker/rendering/: fn.stringify_svg.html  index.html  sidebar-items.js
shapemaker/synchronization/: index.html  sidebar-items.js
shapemaker/ui/: constant.PROGRESS_BARS_STYLE.html  fn.format_log_msg.html  fn.format_log_msg_cyan.html  fn.setup_progress_bar.html  index.html  sidebar-items.js  struct.Spinner.html  trait.Log.html  trait.MaybeProgressBar.html
shapemaker/video/: index.html  sidebar-items.js
shapemaker/vst/: fn.GetPluginFactory.html  fn.ModuleEntry.html  fn.ModuleExit.html  index.html  sidebar-items.js  static.clap_entry.html
src/: README.md  canvas.rs  cli.rs  color.rs  examples.rs  layer.rs  lib.rs  main.rs  midi.rs  transform.rs  ui.rs  video.rs  vst.rs  web.rs
src/cli/: mod.rs  new.rs  run.rs  watch.rs
src/geometry/: angle.rs  axis.rs  mod.rs  point.rs  region.rs
src/graphics/: README.md  canvas.rs  color.rs  fill.rs  filter.rs  layer.rs  mod.rs  objects.rs  region.rs  shapes.rs  transform.rs
src/random/: angle.rs  canvas.rs  color.rs  fill.rs  mod.rs  objects.rs  point.rs  region.rs
src/rendering/: canvas.rs  fill.rs  filter.rs  fonts.rs  layer.rs  mod.rs  objects.rs  rasterization.rs  renderable.rs  shapes.rs  svg.rs  transform.rs
src/shapemaker/: lib.rs.html  ui.rs.html
src/synchronization/: audio.rs  cue_markers.rs  midi.rs  mod.rs  sync.rs
src/ui/: log.rs  mod.rs  pretty.rs  progress.rs  spinner.rs
src/video/: README.md  animation.rs  context.rs  encoding.rs  engine.rs  hooks.rs  mod.rs  preview.html  scene.rs  server.rs  video.rs
src/vst/: beacon.rs  mod.rs  probe.rs  remote_probe.rs  vst.rs
src/wasm/: layer.rs  mod.rs  point.rs  transform.rs  web.rs
trait.impl/strum/: trait.IntoEnumIterator.js
type.impl/std/: primitive.usize.js
(+1624 files in other folders)
