[package]
name = "shapemaker"
version = "1.1.1"
edition = "2021"
include = ["/src"]
license = "AGPL-3.0"
homepage = "https://gwen.works/shapemaker"
repository = "https://github.com/gwennlbh/shapemaker"
authors = ["Gwenn Le Bihan <gwenn.lebihan7@gmail.com>"]
description = "An experimental WASM-capable, generative SVG-based video rendering engine that reacts to MIDI or audio data"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "shapemaker"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
vst = ["dep:env_logger", "dep:nih_plug", "dep:ws"]
web = ["dep:wasm-bindgen", "dep:web-sys"]
mp4 = ["dep:env_logger", "dep:ffmpeg-next", "dep:video-rs"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = [
    "assert_process_allocs",
], optional = true }
anyhow = "1.0.81"
chrono = "0.4.23"
docopt = "1.1.1"
hound = "3.5.0"
indicatif = "0.17.2"
itertools = "0.12.1"
midly = "0.5.3"
rand = "0.8.5"
serde = { version = "1.0.147", features = ["derive"] }
serde_cbor = "0.11.2"
serde_json = "1.0.91"
svg = "0.17.0"
chrono-human-duration = "0.1.1"
handlebars = "5.1.2"
tiny_http = "0.12.0"
wasm-bindgen = { version = "0.2.92", optional = true }
getrandom = { version = "0.2", features = ["js"] }
web-sys = { version = "0.3.4", optional = true, features = [
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Window',
] }
once_cell = "1.19.0"
nanoid = "0.4.0"
console = { version = "0.15.8", features = ["windows-console-colors"] }
backtrace = "0.3.71"
slug = "0.1.5"
roxmltree = "0.19.0"
strum = { version = "0.26.2", features = ["strum_macros"] }
strum_macros = "0.26.2"
tiny-skia = "0.11.4"
resvg = "0.44.0"
measure_time = "0.9.0"
env_logger = { version = "0.11.6", optional = true }
log = "0.4.26"
ndarray = "0.16.1"
rgb2yuv420 = "0.2.3"
video-rs = { version = "0.10.3", features = ["ndarray"], optional = true }
ffmpeg-next = { version = "7.1.0", optional = true }
rayon = "1.10.0"
num_cpus = "1.16.0"
futures-util = "0.3.31"
ws = {version = "0.9.2", optional = true}


[dev-dependencies]
rust-analyzer = "0.0.1"
