[package]
name = "schedule-hell"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
itertools = "0.14.0"
notify-rust = "4.12.0"
pico-args = { version = "0.5.0", features = ["combined-flags", "eq-separator"] }
rand = "0.9.2"
serde-aux = "4.7.0"
shapemaker = { path = "../..", features = ["video"] }
tokio = { version = "1.50.0", features = ["rt-multi-thread"] }
